--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/PluginParentSample")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="PluginParentSampleGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/TestMap.TestMap
+EditorStartupMap=/Game/TestMap.TestMap
+
